<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/rate_us_caps_netigen" />
    <Preference
        android:key="@string/rate_us_caps_netigen"
        android:layout="@layout/layout_rate_us" />
    <PreferenceCategory android:title="@string/follow_us_caps_netigen" />
    <Preference
        android:icon="@drawable/ic_netigen"
        android:key="website"
        android:summary="@string/visit_www_netigen"
        android:title="@string/website_netigen" />
    <Preference
        android:icon="@drawable/ic_facebook"
        android:key="facebook"
        android:summary="@string/follow_facebook_netigen"
        android:title="@string/facebook_netigen" />
    <Preference
        android:icon="@drawable/ic_twitter"
        android:key="twitter"
        android:summary="@string/follow_twitter_netigen"
        android:title="@string/twitter_netigen" />
    <Preference
        android:icon="@drawable/ic_google_plus"
        android:key="google"
        android:summary="@string/follow_g_plus_netigen"
        android:title="@string/google_plus_netigen" />
</PreferenceScreen>