<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_language_dialog_netigen">

    <TextView
        android:id="@+id/textView_translation_info_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center|start"
        android:text="@string/translation_information_title_netigen"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView_translation_info_content1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_translation_info_content1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/translation_information_content1_netigen"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/language_dialog_sub_text_color_netigen"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_translation_info_content2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_translation_info_title" />

    <TextView
        android:id="@+id/textView_translation_info_content2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/translation_information_content2_netigen"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/language_dialog_sub_text_color_netigen"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button_positive"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_translation_info_content1" />

    <Button
        android:id="@+id/button_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/settings_upper_case_netigen"
        android:textColor="@color/language_dialog_buttons_text_color_netigen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_translation_info_content2" />

    <Button
        android:id="@+id/button_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/ok_upper_case_netigen"
        android:textColor="@color/language_dialog_buttons_text_color_netigen"
        app:layout_constraintBottom_toBottomOf="@+id/button_positive"
        app:layout_constraintRight_toLeftOf="@+id/button_positive"
        app:layout_constraintTop_toTopOf="@+id/button_positive" />

</androidx.constraintlayout.widget.ConstraintLayout>