<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/pop_up_portrait_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_language_dialog">

    <ImageView
        android:id="@+id/rateUsImage"
        android:layout_width="@dimen/pop_up_portrait_width"
        android:layout_height="0dp"
        android:src="@drawable/img_rate_us"
        app:layout_constraintDimensionRatio="84:64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rateUsImageTint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_rate_us_tint"
        app:layout_constraintBottom_toBottomOf="@id/rateUsImage"
        app:layout_constraintEnd_toEndOf="@id/rateUsImage"
        app:layout_constraintStart_toStartOf="@id/rateUsImage"
        app:layout_constraintTop_toTopOf="@id/rateUsImage"
        app:tint="@color/dialog_accent" />

    <ImageView
        android:id="@+id/closeRateUs"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="@dimen/small_space_netigen_api"
        android:src="@drawable/bnt_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rateUsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:paddingStart="@dimen/medium_space_netigen_api"
        android:paddingLeft="@dimen/medium_space_netigen_api"
        android:paddingEnd="@dimen/medium_space_netigen_api"
        android:paddingRight="@dimen/medium_space_netigen_api"
        android:text="@string/do_you_like_this_app_netigen"
        android:textColor="@color/dialog_accent"
        android:textSize="@dimen/title_text_size_netigen_api"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rateUsImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rateUsFragmentAskForRateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/medium_space_netigen_api"
        android:paddingLeft="@dimen/medium_space_netigen_api"
        android:paddingEnd="@dimen/medium_space_netigen_api"
        android:paddingRight="@dimen/medium_space_netigen_api"
        android:text="@string/please_support_us_netigen"
        android:textColor="#535368"
        android:textSize="@dimen/dialogInfoTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rateUsTitle" />

    <TextView
        android:id="@+id/rateUsFragmentLaterTextView"
        style="@style/NeutralDialogButtonNetigenApi"
        android:text="@string/later_netigen"
        app:layout_constraintEnd_toStartOf="@id/rateUsFragmentYesTextView"
        app:layout_constraintTop_toTopOf="@id/rateUsFragmentYesTextView" />

    <TextView
        android:id="@+id/rateUsFragmentYesTextView"
        style="@style/PositiveDialogButtonNetigenApi"
        android:layout_marginTop="@dimen/big_space_netigen_api"
        android:text="@string/rate_us_netigen"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rateUsFragmentAskForRateTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>
