<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_language_dialog"
    android:paddingBottom="@dimen/default_margin_netigen_api">

    <TextView
        android:id="@+id/textView_translation_info_title"
        style="@style/DialogTitleTextView"
        android:text="@string/translation_information_title_netigen"
        app:layout_constraintBottom_toTopOf="@+id/textView_translation_info_content1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_translation_info_content1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin_netigen_api"
        android:layout_marginRight="@dimen/default_margin_netigen_api"
        android:layout_marginBottom="8dp"
        android:text="@string/translation_information_content1_netigen"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/dialog_text_view"
        android:textSize="@dimen/dialogInfoTextSize"
        app:layout_constraintBottom_toTopOf="@+id/textView_translation_info_content2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_translation_info_title" />

    <TextView
        android:id="@+id/textView_translation_info_content2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin_netigen_api"
        android:layout_marginRight="@dimen/default_margin_netigen_api"
        android:layout_marginBottom="8dp"
        android:text="@string/translation_information_content2_netigen"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/dialog_text_view"
        android:textSize="@dimen/dialogInfoTextSize"
        app:layout_constraintBottom_toTopOf="@+id/button_positive"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_translation_info_content1" />


    <TextView
        android:id="@+id/button_positive"
        style="@style/PositiveDialogButtonNetigenApi"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height_netigen_api"
        android:layout_marginTop="24dp"
        android:layout_marginRight="@dimen/default_margin_netigen_api"
        android:layout_marginBottom="@dimen/default_margin_netigen_api"
        android:gravity="center"
        android:minWidth="@dimen/button_min_width_netigen_api"
        android:paddingLeft="@dimen/default_margin_netigen_api"
        android:paddingRight="@dimen/default_margin_netigen_api"
        android:text="@string/settings_normal_netigen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_translation_info_content2" />

    <TextView
        android:id="@+id/button_negative"
        style="@style/NeutralDialogButtonNetigenApi"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height_netigen_api"
        android:layout_marginRight="@dimen/default_margin_netigen_api"
        android:gravity="center"
        android:minWidth="@dimen/button_min_width_netigen_api"
        android:paddingLeft="@dimen/default_margin_netigen_api"
        android:paddingRight="@dimen/default_margin_netigen_api"
        android:text="@string/ok_netigen"
        app:layout_constraintBottom_toBottomOf="@+id/button_positive"
        app:layout_constraintRight_toLeftOf="@+id/button_positive"
        app:layout_constraintTop_toTopOf="@+id/button_positive" />


</androidx.constraintlayout.widget.ConstraintLayout>